Thu Jan 21 2014 Christopher O'Brien <obriencj@gmail.com> - 1.4.0-0
	fixed issues with auto-exploding a dist and cleaning up
	afterwards

	InvokeDynamic, MethodType, and MethodHandle CONSTANT types

	added --ignore-manifest-key option

	RuntimeInvisibleAnnotations support

	more crypto hashes supported in manifests

	removed PyXML dependency

	bugfixes

Thu May 23 2013 Christopher O'Brien <obriencj@gmail.com> - 1.3-1
	I think we've sat on these changes long enough, let's make a
	release

	expand on cheetah html reporting

	requires PyXML for xml.xpath

	renamed to python-javatools as there was already a javaclass

	significantly more testing before tagging a release

	distdiff and distpatchgen now use multiprocessing by default

	removed distpatchgen and javatools.patchgen

	added support for checking runtime annotations

	keep pylint happy

Thu Jun 14 2012 Christopher O'Brien <obriencj@gmail.com> - 1.2-1
	require python 2.6 and later rather than trying to fight with
	library alternatives

	added classes to compartmentalize distinfo and jarinfo data

	reworked dependency information into a dep tree rather than a
	simple list

	rework options into groups

	fix for modified-utf8 in class constant pools

	added multiple output formats for reports (text, json, html)

	the html output is currently simplified, and will be expanded upon
	later

Sun May 6 2012 Christopher O'Brien <obriencj@gmail.com> - 1.1-1
	dependency features, license files

Fri Apr 27 2012 Christopher O'Brien <obriencj@gmail.com> - 1.0-1
	Initial build.