@@ -12,6 +12,8 @@ Thu Jan 21 2014 Christopher O'Brien <obriencj@gmail.com> - 1.4.0-0
 
 	removed PyXML dependency
 
+	manifest enhancements
+
 	bugfixes
 
 Thu May 23 2013 Christopher O'Brien <obriencj@gmail.com> - 1.3-1
